Added endpoints to CRUD