@@ -1,6 +1,7 @@
 package com.github.saulmmbp.foroAlura.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -8,7 +9,10 @@ import com.github.saulmmbp.foroAlura.dao.CursoRepository;
 import com.github.saulmmbp.foroAlura.dto.CursoDto;
 import com.github.saulmmbp.foroAlura.entity.Curso;
 
+import jakarta.transaction.Transactional;
+
 @Service
+@Transactional
 public class CursoService {
 
 	private CursoRepository cursoRepository;
@@ -18,10 +22,27 @@ public class CursoService {
 	}
 	
 	public List<CursoDto> findAll() {
-		return cursoRepository.findAll().stream().map(Curso::toDto).toList();
+		return cursoRepository.findAll().stream()
+				.map(Curso::toDto)
+				.collect(Collectors.toList());
 	}
 	
 	public CursoDto findById(Long id) {
 		return cursoRepository.findById(id).orElseThrow().toDto();
+	}
+	
+	public CursoDto save(CursoDto cursoDto) {
+		return cursoRepository.save(cursoDto.toEntity()).toDto();
+	}
+	
+	public CursoDto update(CursoDto cursoDto, Long id) {
+		Curso curso = cursoRepository.findById(id).orElseThrow();
+		curso.setNombre(cursoDto.nombre());
+		curso.setCategoria(cursoDto.categoria());
+		return cursoRepository.save(curso).toDto();
+	}
+	
+	public void delete(Long id) {
+		cursoRepository.deleteById(id);
 	}
 }
